Implementation of KMeans clustering over PQ codes.